fix: fix media responsiveness on smaller screens

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1457,16 +1457,31 @@ section,
     opacity: 1;
 }
 
+
+.member-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;    /* fills box while keeping aspect ratio */
+    object-position: center; /* centers the subject */
+    display: block;
+}
 .team-member-image {
-    width: 248px;
-    height: 248px;
+    /* width: 248px; */
+     /* min-height: 248px; */
+    /* width: 100%; */
 }
 
 @media (max-width: 576px) {
-    .team-member-image {
-        min-width: 485px;
+    /* .team-member-image {
+        min-width: 100%;
         height: 485px;
-    }
+    } */
+
+    /* .team .team-member .member-info {
+        padding: 25px 15px;
+        text-align: center;
+    } */
+
 }
 
 /*--------------------------------------------------------------
